unpackaged/main/default/objects/Extension_Request_QE__c/Extension_Request_QE__c.object-meta.xml
<CustomObject>
    <label>Extension Request QE</label>
    <nameField>
        <displayFormat>ER-QE-{00000}</displayFormat>
        <label>ER QE N0</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extension Requests QE</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>