unpackaged/main/default/objects/Extension_Request_QE__c/fields/Quality_Event__c.field-meta.xml
<CustomField>
        <fullName>Quality_Event__c</fullName>
        <label>Quality Event</label>
        <referenceTo>CMPL123QMS__Deviation__c</referenceTo>
        <relationshipLabel>Extension Requests QE</relationshipLabel>
        <relationshipName>Extension_Requests_QE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>