unpackaged/main/default/objects/Extension_Request_QE__c/fields/Reason_for_Extension__c.field-meta.xml
<CustomField>
        <fullName>Reason_for_Extension__c</fullName>
        <label>Reason for Extension</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>