unpackaged/main/default/objects/Extension_Request_QE__c/validationRules/Proposed_Date_cannot_be_in_future.validationRule-meta.xml
<ValidationRule>
        <fullName>Proposed_Date_cannot_be_in_future</fullName>
        <active>true</active>
        <errorConditionFormula>Proposed_Due_Date__c  &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Proposed_Due_Date__c</errorDisplayField>
        <errorMessage>Proposed Due Date cannot be in the past.</errorMessage>
    </ValidationRule>